backend --s3에서 이미지 파일 가져오기 (보완)